# benchpress

./: .editorconfig  .gitignore  .gitmodules  .globalconfig  .jscpd.json  .mega-linter.yml  .npmpackagejsonlintignore  .pylintrc  BenchPress.sln  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  ResourceGroup.Tests.ps1  SECURITY.md  SUPPORT.md  bicepconfig.json  build.ps1  package-lock.json  package.json  xxx.ps1  yyy.ps1  zzz.ps1
.devcontainer/: Dockerfile  devcontainer-features.json  devcontainer.json  install.sh
.github/: pull_request_template.md
BenchPress/: BenchPress.sln  README.md
designs/: BenchPress.cs  IAllocateResourceGroup.cs  ICreateResource.cs  ILifecycleManager.cs  IValidateResource.cs  README.md
docs/: Confirm-AzBPAccount.md  Confirm-AzBPActionGroup.md  Confirm-AzBPAksCluster.md  Confirm-AzBPAksNodePool.md  Confirm-AzBPApiManagement.md  Confirm-AzBPApiManagementApi.md  Confirm-AzBPApiManagementDiagnostic.md  Confirm-AzBPApiManagementLogger.md  Confirm-AzBPApiManagementPolicy.md  Confirm-AzBPAppInsights.md  Confirm-AzBPAppServicePlan.md  Confirm-AzBPBicepFile.md  Confirm-AzBPContainerApp.md  Confirm-AzBPContainerAppManagedEnv.md  Confirm-AzBPContainerRegistry.md  Confirm-AzBPCosmosDBAccount.md  Confirm-AzBPCosmosDBGremlinDatabase.md  (+52 more)
docs-site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.cjs
framework/python/: .bandit.yml  setup.cfg  test.py
framework/python/.github/workflows/: mega-linter.yml
framework/python/src/benchpress/: __init__.py  calculator.py
framework/python/tests/: test_calculator.py
(+534 files in other folders)
