[metadata]
name = benchpress
version = 0.0.1
author = Uffaz Nathaniel
url = https://github.com/Azure/benchpress
description = Testing framework for Azure deployment features by using Bicep.
keywords = azure, bicep, arm, iac, testing

[options]
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    protobuf == 4.21.9
    pytest

[options.packages.find]
where=src
